changed weather icon(html)

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <div class="col" id="mainInfo">
           <h1>Kyiv</h1>
           <h2>20˚C</h2>
-          <p>Cloudy</p>
+          <p>Rainy</p>
           <ul>
             <li>Friday</li>
             <li>11:56</li>
           </ul>
         </div>
-        <div class="col">
-          <i class="fa-solid fa-cloud cloud"></i>
+        <div class="col" id="rain">
+          <img src="src/img/2682835_cloud_cloudy_forecast_precipitation_rain_icon.png" alt="rainy">
         </div>
       </div>
       <div class="row" id="else">
