showing date/time last updated

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <h2 id="temp"></h2>
           <p id="weatherDescription"></p>
           <ul>
-            <li>Friday</li>
-            <li>11:56</li>
+            <li>Last updated</li>
+            <li id="date"></li>
           </ul>
         </div>
         <div class="col" id="rain">
@@ -42,7 +42,7 @@
         </div>
         <div class="col-4">
           Wind💨<br />
-          <span id="wind"></span>km/h
+          <span id="wind"></span> km/h
         </div>
         <div class="col-4">
           Feels like🌡<br />
