displaying accurate weather icons

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <li id="date"></li>
           </ul>
         </div>
-        <div class="col" id="rain">
-          <img src="src/img/2682835_cloud_cloudy_forecast_precipitation_rain_icon.png" alt="rainy">
+        <div class="col" >
+          <img src="" alt="" id="weatherIcon">
         </div>
       </div>
       <div class="row" id="else">
