search engine added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
   <body>
     <div class="container">
         <div class="top">
+            <form class="searchEngine">
+                <div class="row">
+                    <div class="col-5">
+            <input type="search" 
+            placeholder="Type in your city" 
+            id="citySearch"
+            autocomplete="off"/>
+            </div>
+            <div class="col-1">
+                <input type="submit"
+                value="Search"
+                id="searchButton"/>
+            </div>
+                </div>
+        </form>
       <div class="row" >
         <div class="col" id="mainInfo">
           <h1 id = "city"></h1>
