--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
         </div>
     </div>
     <script src="src/index.js"></script>
+    <a href="https://github.com/DariaHolovko/Vanilla_Weather_App">Open-source code</a> by Daria Holovko
   </body>
 </html>
