added weather forecast (HTML/CSS)

--- a/index.html
+++ b/index.html
@@ -55,16 +55,28 @@
       </div>
       <div class="row" id="else">
         <div class="col-4">
-          Humidity💧 <br />
+          Humidity <br />
           <span id="humidity"></span>%
         </div>
         <div class="col-4">
-          Wind💨<br />
+          Wind<br />
           <span id="wind"></span> km/h
         </div>
         <div class="col-4">
-          Feels like🌡<br />
+          Feels like<br />
           <span id="feeling"></span>˚
+        </div>
+      </div>
+      <div class="weatherForecast">
+        <div class="row">
+          <div class="col-2">
+           <div class="forecastDay"> Sat</div>
+            <img src="http://openweathermap.org/img/wn/01n@2x.png" width="36"/>
+            <div class="forecastTemperature">
+             <span class="forecastTempMax"> 18˚ </span> 
+             <span class="forecastTempMin"> 12˚ </span> 
+            </div>
+          </div>
         </div>
       </div>
         </div>
