--- a/index.html
+++ b/index.html
@@ -67,17 +67,7 @@
           <span id="feeling"></span>˚
         </div>
       </div>
-      <div class="weatherForecast">
-        <div class="row">
-          <div class="col-2">
-           <div class="forecastDay"> Sat</div>
-            <img src="http://openweathermap.org/img/wn/01n@2x.png" width="36"/>
-            <div class="forecastTemperature">
-             <span class="forecastTempMax"> 18˚ </span> 
-             <span class="forecastTempMin"> 12˚ </span> 
-            </div>
-          </div>
-        </div>
+      <div class="weatherForecast" id="forecast">
       </div>
         </div>
     </div>
