added current location button (HTML, CSS)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 value="Search"
                 id="searchButton"/>
             </div>
+            <div class="col-2">
+              <button class="currentLocationButton"><i class="fa-solid fa-location-crosshairs"></i></button>
+            </div>
                 </div>
         </form>
       <div class="row" >
@@ -50,6 +53,7 @@
           <img src="" alt="" id="weatherIcon">
         </div>
       </div>
+    
       <div class="row" id="else">
         <div class="col-4">
           Humidity <br />
@@ -64,6 +68,7 @@
           <span id="feeling"></span>˚
         </div>
       </div>
+      
       <div class="weatherForecast" id="forecast">
       </div>
         </div>
